--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,10 @@
           <a class="nav-link" href="stress.html">Stress Management</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="resources.html">Resources</a>
+          <a class="nav-link" href="resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
+          <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -46,48 +46,11 @@
 </nav>
 <div class="content-box mx-auto my-4 p-4">
         <header>
-           <h1><i class="fa-regular fa-heart"></i> Resources</h1>
-         <div class="d-flex justify-content-center"><img src="assets/images/support.jpg" class="mb-5" width="70%" height="auto" alt="An illustration showing multiple raised hands with heart symbols."></div>
+           <h1><i class="fa-regular fa-heart"></i> Get in Touch</h1>
         </header>
         <main>
             <!-- Your main content here -->
-             <table class="table res-table table-hover table-striped">
-  <thead>
-    <tr>
-      <th scope="col"></th>
-      <th scope="col">Organisation</th>
-      <th scope="col">Support:</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row"></th>
-      <td><a href="https://www.mind.org.uk/" target="_blank" rel="noopener" aria-label="Visit Mind Charity's website (opens in a new tab)">Mind</a></td>
-      <td>A leading mental health charity offering support, information, and helplines for various mental health concerns.</td>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td><a href="https://mentalhealth-uk.org/" target="_blank" rel="noopener" aria-label="Visit Mental Health UK's website (opens in a new tab)">Mental Health UK</a></td>
-      <td>Provides downloadable guides, wellbeing tools, and advice on managing stress, anxiety, and other conditions.</td>
-
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td><a href="https://www.nhs.uk/mental-health/" target="_blank" rel="noopener" aria-label="Visit NHS mental-health's website (opens in a new tab)">NHS Mental Health Services</a></td>
-      <td>Offers professional support, therapy options, and urgent mental health assistance.</td>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td><a href="https://www.samaritans.org/" target="_blank" rel="noopener" aria-label="Visit the Samaritans webiste (opens in a new tab)">Samaritans</a></td>
-      <td>A 24/7 helpline providing confidential emotional support for anyone struggling.</td>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td><a href="https://giveusashout.org/" target="_blank" rel="noopener" aria-label="Visit Shout's webiste (opens in a new tab)">Shout</a></td>
-      <td>A free, 24/7 text service offering mental health support for those in crisis.</td>
-    </tr>
-  </tbody>
-</table>
+     
         </main>
     </div>
 <footer class="mt-auto">
