add form to contact page

--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,38 @@
 <div class="content-box mx-auto my-4 p-4">
         <header>
            <h1><i class="fa-regular fa-heart"></i> Get in Touch</h1>
+           
         </header>
         <main>
             <!-- Your main content here -->
-     
+           <div><p>Your thoughts, experiences, and feedback are important to us. Whether you have a question, a suggestion, or just want to share your thoughts, we’re here to listen. Every message we receive helps us improve and better support our community.</p>
+        <p>Please fill out the form below, and we’ll do our best to respond as soon as possible. Your input matters, and we appreciate you taking the time to connect with us!</p>
+        </div> 
         </main>
+
+        <form action="thankyou.html">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="subject" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="subject" placeholder="Subject" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" id="message" rows="5" placeholder="Your Message"
+                            required></textarea>
+                    </div>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary msg">Send Message</button>
+                    </div>
+                </form>
+
     </div>
 <footer class="mt-auto">
 <div class="row">
