--- a/index.html
+++ b/index.html
@@ -115,20 +115,25 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 <!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
 
+<!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
 <script>
-document.addEventListener("DOMContentLoaded", function() {
-  var navbarCollapse = document.querySelector('.navbar-collapse');
-  var navLinks = document.querySelectorAll('.navbar-collapse .nav-link');
-  var bsCollapse = bootstrap.Collapse.getOrCreateInstance(navbarCollapse);
-
-  navLinks.forEach(function(link) {
-    link.addEventListener('click', function() {
-      // Only collapse if navbar is shown (mobile)
-      if (window.getComputedStyle(document.querySelector('.navbar-toggler')).display !== 'none') {
-        bsCollapse.hide();
-      }
-    });
-  });
-});
+    document
+        .querySelectorAll(".navbar-collapse .nav-link")
+        .forEach((link) => {
+            link.addEventListener("click", function (e) {
+                let section = document.querySelector(e.target.getAttribute("href"));
+                if (section) {
+                    e.preventDefault(); // Prevent default anchor click behavior
+                    let navbarHeight = document.querySelector(".navbar-toggler").offsetHeight;
+                    window.scroll({
+                        top: section.offsetTop - navbarHeight, // Adjust for navbar height
+                        behavior: "smooth",
+                    });
+                    document
+                        .querySelector(".navbar-collapse")
+                        .classList.remove("show"); // Collapse navbar
+                }
+            });
+        });
 </script>
 </html>
