--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded fixed-top">
   <div class="container-fluid ">
-    <a class="navbar-brand" href="#home"><img src="assets/images/lavender2.png" alt="piece of lavender"> Exhale</a>
+    <a class="navbar-brand" href="index.html"><img src="assets/images/lavender2.png" alt="piece of lavender"> Exhale</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -47,7 +47,8 @@
 
 <div class="content-box mx-auto p-4">
         <header>
-            <h1><i class="fa-regular fa-heart"></i> Exhale</h1>
+            <h1><i class="fa-regular fa-heart"></i> Exhale</a>
+            </h1>
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
      <div class="carousel-item">
