--- a/resources.html
+++ b/resources.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded fixed-top">
   <div class="container-fluid ">
-    <a class="navbar-brand" href="#home"><img src="assets/images/lavender2.png" alt="piece of lavender"> Exhale</a>
+    <a class="navbar-brand" href="index.html"><img src="assets/images/lavender2.png" alt="piece of lavender"> Exhale</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
