--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c102f16741.js" crossorigin="anonymous"></script>
-</head>
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Exhale</title>
-
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded fixed-top">
@@ -47,8 +45,7 @@
 
 <div class="content-box mx-auto p-4">
         <header>
-            <h1><i class="fa-regular fa-heart"></i> Exhale</a>
-            </h1>
+            <h1><i class="fa-regular fa-heart"></i> Exhale</h1>
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
      <div class="carousel-item">
@@ -96,7 +93,7 @@
                     <p>When we have good mental health, we feel strong, calm, and ready to face life's ups and downs. If we ever feel overwhelmed or sad, it's okay to ask for help—because everyone deserves to feel good inside!</p>
                     </div>
                 </div>
-            
+            </section>
             </main>
     </div>
 <footer class="mt-auto">
@@ -114,8 +111,6 @@
 </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-<!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
-
 <!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
 <script>
     document
