adjust image URLs

--- a/issues.html
+++ b/issues.html
@@ -136,7 +136,7 @@
 
 <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-5">
             <div class="card">
-  <img src="assets/images/eating disorders.jpg" class="card-img-top" alt="A plate with fruit salad">
+  <img src="assets/images/eating-disorders.jpg" class="card-img-top" alt="A plate with fruit salad">
   <div class="card-body">
     <h2 class="card-title">Eating Disorders</h2>
     <p class="card-text"> Conditions like anorexia, bulimia, and binge eating disorder that affect eating behaviors and body image.</p>
@@ -164,7 +164,7 @@
 
 <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-5">
             <div class="card">
-  <img src="assets/images/social anxiety.jpg" class="card-img-top" alt="a kitten sitting on a sofa">
+  <img src="assets/images/social-anxiety.jpg" class="card-img-top" alt="a kitten sitting on a sofa">
   <div class="card-body">
     <h2 class="card-title">Social Anxiety Disorder</h2>
     <p class="card-text">An intense fear of social situations, leading to avoidance and distress.</p>
@@ -235,8 +235,7 @@
     </div> 
 </div>     
 </footer>
-</body>
-
+<!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 <!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
 <script>
@@ -259,4 +258,5 @@
             });
         });
 </script>
+</body>
 </html>
