--- a/stress.html
+++ b/stress.html
@@ -89,7 +89,7 @@
 
   <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-5">
             <div class="card">
-  <img src="assets/images/talk to friend.jpg" class="card-img-top" alt="A girl smiling as she talks on the phone">
+  <img src="assets/images/talk-to-friend.jpg" class="card-img-top" alt="A girl smiling as she talks on the phone">
   <div class="card-body">
     <h2 class="card-title">Talk to a Friend</h2>
     <p class="card-text">Sharing thoughts and feelings helps reduce stress, ease anxiety, and provide comfort during challenging times.</p>
@@ -139,7 +139,7 @@
 
   <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-5">
             <div class="card">
-  <img src="assets/images/healthy eating.jpg" class="card-img-top" alt=" Vegetarian diet that includes fish or other aquatic animals">
+  <img src="assets/images/healthy-eating.jpg" class="card-img-top" alt=" Vegetarian diet that includes fish or other aquatic animals">
   <div class="card-body">
     <h2 class="card-title">Healthy Eating</h2>
     <p class="card-text">Eating nutritious foods supports both body and mind. A balanced diet helps regulate mood, boost energy, and improve brain function.</p>
@@ -184,10 +184,9 @@
     </div> 
 </div>     
 </footer>
-</body>
-<!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
-
+<!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
 <script>
     document
         .querySelectorAll(".navbar-collapse .nav-link")
@@ -208,4 +207,5 @@
             });
         });
 </script>
+</body>
 </html>
