--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
      <div class="carousel-item">
-      <img src="assets/images/mental health matters.jpg" class="d-block w-100" alt="small blackboard on a leafy background with the text - Mental Health Matters">
+      <img src="assets/images/mental-health-matters.jpg" class="d-block w-100" alt="small blackboard on a leafy background with the text - Mental Health Matters">
     </div>
     <div class="carousel-item active">
-      <img src="assets/images/i can do it.jpg" class="d-block w-100" alt="card with the text - I can do it">
+      <img src="assets/images/i-can-do-it.jpg" class="d-block w-100" alt="card with the text - I can do it">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/adjust your sails.jpg" class="d-block w-100" alt="Typewriter with a piece of paper in it with the text - You can not change the wind, but you can adjust your sails">
+      <img src="assets/images/adjust-your-sails.jpg" class="d-block w-100" alt="Typewriter with a piece of paper in it with the text - You can not change the wind, but you can adjust your sails">
     </div>
      <div class="carousel-item">
-      <img src="assets/images/its ok.jpg" class="d-block w-100" alt="Affirmations including - It's ok to not be ok, It's ok to ask for help, It's ok to take a break, It's ok to not have all the answers, It's ok to not be perfect, It's ok to be yourself">
+      <img src="assets/images/its-ok.jpg" class="d-block w-100" alt="Affirmations including - It's ok to not be ok, It's ok to ask for help, It's ok to take a break, It's ok to not have all the answers, It's ok to not be perfect, It's ok to be yourself">
     </div>
      <div class="carousel-item">
-      <img src="assets/images/take care.jpg" class="d-block w-100" alt="Person holding a mug against a mountainous background with the text - Take care of your mind and body.">
+      <img src="assets/images/take-care.jpg" class="d-block w-100" alt="Person holding a mug against a mountainous background with the text - Take care of your mind and body.">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -109,7 +109,7 @@
     </div> 
 </div>     
 </footer>
-</body>
+<!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 <!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
 <script>
@@ -132,4 +132,5 @@
             });
         });
 </script>
+</body>
 </html>
