--- a/resources.html
+++ b/resources.html
@@ -102,7 +102,9 @@
 </div>     
 </footer>
 
+<!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
 <script>
     document
         .querySelectorAll(".navbar-collapse .nav-link")
@@ -122,7 +124,6 @@
                 }
             });
         });
-<!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
 </script>
 </body>
 </html>
