--- a/resources.html
+++ b/resources.html
@@ -45,7 +45,7 @@
 <div class="content-box mx-auto my-4 p-4">
         <header>
            <h1><i class="fa-regular fa-heart"></i> Resources</h1>
-         <div class="d-flex justify-content-center"><img src="assets/images/support.jpg" class="mb-5" width="70%" height="auto" alt="An illustration showing multiple raised hands with heart symbols."></div>
+         <div class="d-flex justify-content-center"><img src="assets/images/support.jpg" class="hands-raised mb-5" alt="An illustration showing multiple raised hands with heart symbols."></div>
         </header>
         <main>
             <!-- Your main content here -->
