--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#about">About</a>
+          <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#intro">Intro</a>
+          <a class="nav-link" href="#intro">Intro</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="issues.html">Common Issues</a>
